fix: [CDS-70901]: service override manifests overlap (#16284)

--- a/src/modules/75-cd/components/EnvironmentsV2/EnvironmentDetails/ServiceOverrides/ServiceManifestOverride/ServiceManifestOverride.module.scss
+++ b/src/modules/75-cd/components/EnvironmentsV2/EnvironmentDetails/ServiceOverrides/ServiceManifestOverride/ServiceManifestOverride.module.scss
@@ -16,7 +16,7 @@
 }
 .manifestList {
   display: grid;
-  grid-template-columns: 180px 230px 230px minmax(10px, 1fr) 80px;
+  grid-template-columns: 180px 230px 230px minmax(min-content, 1fr) 80px;
   column-gap: var(--spacing-medium);
   align-items: center;
   &.list-header {
